# LegacyGram

./: README.md  build.py  pyproject.toml
.github/workflows/: build.yml
LegacyGram/: header.py  main.py  settings.py
LegacyGram/data/: constants.py
LegacyGram/features/: action_bar.py  gift_button.py  media_layout.py  premium_badge.py  profile_appearance.py  settings_menu.py  star_rating_view.py  star_reaction.py
LegacyGram/i18n/: i18n.py  locales.py
LegacyGram/ui/: settings.py
LegacyGram/utils/: extera_utils.py  java_utils.py  settings_utils.py  utils.py  xposed_utils.py
typings/android/view/: __init__.pyi
typings/de/robv/android/xposed/: __init__.pyi
typings/java/: README.md  __init__.pyi
typings/java/lang/: __init__.pyi
typings/java/lang/reflect/: __init__.pyi
